# plasma-appimage-integration

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md
appimageservices-interface/: CMakeLists.txt
fileitem-actions/: AppImageFileItemActions.cpp  AppImageFileItemActions.h  CMakeLists.txt
res/: AppImage Services.conf  CMakeLists.txt
src/: CMakeLists.txt
src/appimageservices-interface/: CMakeLists.txt  org.appimage.Services.Inspector.xml  org.appimage.Services.Launcher.xml  org.appimage.Services.Updater.Task.xml  org.appimage.Services.Updater.xml
src/fileitem-actions/: AppImageFileItemActions.cpp  AppImageFileItemActions.h  org.appimage.fileitemactions.desktop
src/metadata-extractor/: AppImageExtractor.cpp  AppImageExtractor.h  CMakeLists.txt
src/thumbnailer/: AppImageThumbnailCreator.cpp  AppImageThumbnailCreator.h  CMakeLists.txt  org.appimage.appimage-thumbnailer.desktop
